--- a/schedule.html
+++ b/schedule.html
@@ -35,13 +35,13 @@
                 @apply bg-white;
             }
             .calendar-day {
-                @apply w-12 h-12 md:w-16 md:h-16 flex flex-col items-center justify-center rounded-full cursor-pointer transition-all;
+                @apply w-16 h-16 flex flex-col items-center justify-center rounded-full cursor-pointer transition-all;
             }
             .calendar-day-active {
-                @apply bg-primary text-white ring-2 md:ring-4 ring-primary/20;
+                @apply bg-primary text-white ring-4 ring-primary/20;
             }
             .calendar-day-has-tasks {
-                @apply border-1 md:border-2 border-primary;
+                @apply border-2 border-primary;
             }
             .calendar-day-completed {
                 @apply bg-secondary text-white;
